Fix telemetry when data cross multiple nightly versions. Add Home links.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<link rel="stylesheet" type="text/css" href="common.css" />
+<link rel="stylesheet" type="text/css" href="css/common.css" />
 
-<a href="select.html"><h3>Graph explorer</h3></a>
+<h3><a href="select.html">Graph explorer</a></h3>
 <br/>
-<a href="tools/inspector.html"><h3>Inspector performance</h3></a>
-<a href="tools/console.html"><h3>Console performance</h3></a>
-<a href="tools/netmonitor.html"><h3>Netmonitor performance</h3></a>
-<a href="tools/debugger.html"><h3>Debugger performance</h3></a>
+<h3><a href="tools/inspector.html">Inspector performance</a></h3>
+<h3><a href="tools/console.html">Console performance</a></h3>
+<h3><a href="tools/netmonitor.html">Netmonitor performance</a></h3>
+<h3><a href="tools/debugger.html">Debugger performance</a></h3>
 <br/>
 <h2>Telemetry:</h2>
 Toolbox “cold” opening
