--- a/tools/debugger.html
+++ b/tools/debugger.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-<link rel="stylesheet" type="text/css" href="../common.css" />
+<link rel="stylesheet" type="text/css" href="../css/common.css" />
+<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css" />
 
+<a class="fa fa-home" href="../"></a>
 <h1>Debugger Performance</h1>
 
 <h3>Complicated<h3>
