--- a/tools/debugger.html
+++ b/tools/debugger.html
@@ -9,16 +9,16 @@
 
 <h3>Complicated<h3>
 <h4>Open</h4>
-<iframe src="../perfherder.html?test=complicated.jsdebugger.open&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.jsdebugger.open&days=14"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder.html?test=complicated.jsdebugger.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.jsdebugger.reload&days=14"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder.html?test=complicated.jsdebugger.close&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.jsdebugger.close&days=14"></iframe>
 
 <h3>Simple<h3>
 <h4>Open</h4>
-<iframe src="../perfherder.html?test=simple.jsdebugger.open&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.jsdebugger.open&days=14"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder.html?test=simple.jsdebugger.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.jsdebugger.reload&days=14"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder.html?test=simple.jsdebugger.close&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.jsdebugger.close&days=14"></iframe>
