--- a/tools/netmonitor.html
+++ b/tools/netmonitor.html
@@ -9,20 +9,20 @@
 
 <h3>Complicated<h3>
 <h4>Open</h4>
-<iframe src="../perfherder.html?test=complicated.netmonitor.open&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.netmonitor.open&days=14"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder.html?test=complicated.netmonitor.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.netmonitor.reload&days=14"></iframe>
 <h4>Requests finished</h4>
-<iframe src="../perfherder.html?test=complicated.netmonitor.requestsFinished&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.netmonitor.requestsFinished&days=14"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder.html?test=complicated.netmonitor.close&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.netmonitor.close&days=14"></iframe>
 
 <h3>Simple<h3>
 <h4>Open</h4>
-<iframe src="../perfherder.html?test=simple.netmonitor.open&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.netmonitor.open&days=14"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder.html?test=simple.netmonitor.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.netmonitor.reload&days=14"></iframe>
 <h4>Requests finished</h4>
-<iframe src="../perfherder.html?test=simple.netmonitor.requestsFinished&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.netmonitor.requestsFinished&days=14"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder.html?test=simple.netmonitor.close&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.netmonitor.close&days=14"></iframe>
