--- a/tools/console.html
+++ b/tools/console.html
@@ -9,27 +9,27 @@
 
 <h3>Complicated<h3>
 <h4>Open</h4>
-<iframe src="../perfherder.html?test=complicated.webconsole.open&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.webconsole.open&days=14"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder.html?test=complicated.webconsole.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.webconsole.reload&days=14"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder.html?test=complicated.webconsole.close&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.webconsole.close&days=14"></iframe>
 
 <h3>Simple<h3>
 <h4>Open</h4>
-<iframe src="../perfherder.html?test=simple.webconsole.open&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.webconsole.open&days=14"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder.html?test=simple.webconsole.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.webconsole.reload&days=14"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder.html?test=simple.webconsole.close&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.webconsole.close&days=14"></iframe>
 
 <h4>Object expand</h4>
-<iframe src="../perfherder.html?test=console.objectexpand&days=14"></iframe>
+<iframe src="../perfherder/?test=console.objectexpand&days=14"></iframe>
 <h4>Object expanded</h4>
-<iframe src="../perfherder.html?test=console.objectexpanded.close&days=14"></iframe>
+<iframe src="../perfherder/?test=console.objectexpanded.close&days=14"></iframe>
 <h4>Open with cache</h4>
-<iframe src="../perfherder.html?test=console.openwithcache.open&days=14"></iframe>
+<iframe src="../perfherder/?test=console.openwithcache.open&days=14"></iframe>
 <h4>Bulk log</h4>
-<iframe src="../perfherder.html?test=console.bulklog&days=14"></iframe>
+<iframe src="../perfherder/?test=console.bulklog&days=14"></iframe>
 <h4>Stream log</h4>
-<iframe src="../perfherder.html?test=console.streamlog&days=14"></iframe>
+<iframe src="../perfherder/?test=console.streamlog&days=14"></iframe>
