--- a/tools/inspector.html
+++ b/tools/inspector.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link rel="icon" href="../favicon.svg" />
 
 <link rel="stylesheet" type="text/css" href="../css/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css" />
