Add link to dashboard sources

--- a/index.html
+++ b/index.html
@@ -30,3 +30,5 @@ Inspector “new-root to full reload”
 <h2>BHR</h2>
 <a href="https://arewesmoothyet.com/?mode=track&trackedStat=Devtools%20Hangs">BHR related to DevTools</a> <br/>
 <a href="https://arewesmoothyet.com/?mode=track&trackedStat=All%20Hangs">All BHR</a>
+<br/><br/>
+[ <a href="https://github.com/devtools-html/performance-dashboard">Dashboard sources</a> ]
