Make each tool page have controls for duration and noise-filtering.

--- a/select.html
+++ b/select.html
@@ -163,9 +163,9 @@
     <option value="90">3 months</option>
     <option value="365">Year</option>
   </select>
-  <div style="white-space: nowrap">
+  <label style="white-space: nowrap">
     <input id="filter-stddev" type="checkbox" onchange="updateFilterStddev()">Filter out noise</input>
-  </div>
+  </label>
 </div>
 
 <iframe id="iframe"></iframe>
