--- a/tools/console.html
+++ b/tools/console.html
@@ -5,32 +5,34 @@
 <link rel="stylesheet" type="text/css" href="../css/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css" />
 
+<script type="text/javascript" src="tools.js"></script>
+
 <a class="fa fa-home" href="../"></a>
 <h1>Console Performance</h1>
 
 <h3>Complicated<h3>
 <h4>Open</h4>
-<iframe src="../perfherder/?test=complicated.webconsole.open&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.webconsole.open"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder/?test=complicated.webconsole.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.webconsole.reload"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder/?test=complicated.webconsole.close&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.webconsole.close"></iframe>
 
 <h3>Simple<h3>
 <h4>Open</h4>
-<iframe src="../perfherder/?test=simple.webconsole.open&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.webconsole.open"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder/?test=simple.webconsole.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.webconsole.reload"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder/?test=simple.webconsole.close&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.webconsole.close"></iframe>
 
 <h4>Object expand</h4>
-<iframe src="../perfherder/?test=console.objectexpand&days=14"></iframe>
+<iframe src="../perfherder/?test=console.objectexpand"></iframe>
 <h4>Object expanded</h4>
-<iframe src="../perfherder/?test=console.objectexpanded.close&days=14"></iframe>
+<iframe src="../perfherder/?test=console.objectexpanded.close"></iframe>
 <h4>Open with cache</h4>
-<iframe src="../perfherder/?test=console.openwithcache.open&days=14"></iframe>
+<iframe src="../perfherder/?test=console.openwithcache.open"></iframe>
 <h4>Bulk log</h4>
-<iframe src="../perfherder/?test=console.bulklog&days=14"></iframe>
+<iframe src="../perfherder/?test=console.bulklog"></iframe>
 <h4>Stream log</h4>
-<iframe src="../perfherder/?test=console.streamlog&days=14"></iframe>
+<iframe src="../perfherder/?test=console.streamlog"></iframe>
