--- a/tools/inspector.html
+++ b/tools/inspector.html
@@ -5,27 +5,29 @@
 <link rel="stylesheet" type="text/css" href="../css/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css" />
 
+<script type="text/javascript" src="tools.js"></script>
+
 <a class="fa fa-home" href="../"></a>
 <h1>Inspector Performance</h1>
 
 <h4>Cold open</h4>
-<iframe src="../perfherder/?test=cold.inspector.open&days=14"></iframe>
+<iframe src="../perfherder/?test=cold.inspector.open"></iframe>
 
 <h3>Complicated<h3>
 <h4>Open</h4>
-<iframe src="../perfherder/?test=complicated.inspector.open&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.inspector.open"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder/?test=complicated.inspector.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.inspector.reload"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder/?test=complicated.inspector.close&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.inspector.close"></iframe>
 
 <h3>Simple<h3>
 <h4>Open</h4>
-<iframe src="../perfherder/?test=simple.inspector.open&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.inspector.open"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder/?test=simple.inspector.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.inspector.reload"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder/?test=simple.inspector.close&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.inspector.close"></iframe>
 
 <h4>Mutations</h4>
-<iframe src="../perfherder/?test=inspector.mutations&days=14"></iframe>
+<iframe src="../perfherder/?test=inspector.mutations"></iframe>
