--- a/tools/debugger.html
+++ b/tools/debugger.html
@@ -5,21 +5,23 @@
 <link rel="stylesheet" type="text/css" href="../css/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css" />
 
+<script type="text/javascript" src="tools.js"></script>
+
 <a class="fa fa-home" href="../"></a>
 <h1>Debugger Performance</h1>
 
 <h3>Complicated<h3>
 <h4>Open</h4>
-<iframe src="../perfherder/?test=complicated.jsdebugger.open&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.jsdebugger.open"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder/?test=complicated.jsdebugger.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.jsdebugger.reload"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder/?test=complicated.jsdebugger.close&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.jsdebugger.close"></iframe>
 
 <h3>Simple<h3>
 <h4>Open</h4>
-<iframe src="../perfherder/?test=simple.jsdebugger.open&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.jsdebugger.open"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder/?test=simple.jsdebugger.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.jsdebugger.reload"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder/?test=simple.jsdebugger.close&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.jsdebugger.close"></iframe>
