--- a/tools/netmonitor.html
+++ b/tools/netmonitor.html
@@ -5,25 +5,27 @@
 <link rel="stylesheet" type="text/css" href="../css/common.css" />
 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css" />
 
+<script type="text/javascript" src="tools.js"></script>
+
 <a class="fa fa-home" href="../"></a>
 <h1>Netmonitor Performance</h1>
 
 <h3>Complicated<h3>
 <h4>Open</h4>
-<iframe src="../perfherder/?test=complicated.netmonitor.open&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.netmonitor.open"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder/?test=complicated.netmonitor.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.netmonitor.reload"></iframe>
 <h4>Requests finished</h4>
-<iframe src="../perfherder/?test=complicated.netmonitor.requestsFinished&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.netmonitor.requestsFinished"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder/?test=complicated.netmonitor.close&days=14"></iframe>
+<iframe src="../perfherder/?test=complicated.netmonitor.close"></iframe>
 
 <h3>Simple<h3>
 <h4>Open</h4>
-<iframe src="../perfherder/?test=simple.netmonitor.open&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.netmonitor.open"></iframe>
 <h4>Reload</h4>
-<iframe src="../perfherder/?test=simple.netmonitor.reload&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.netmonitor.reload"></iframe>
 <h4>Requests finished</h4>
-<iframe src="../perfherder/?test=simple.netmonitor.requestsFinished&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.netmonitor.requestsFinished"></iframe>
 <h4>Close</h4>
-<iframe src="../perfherder/?test=simple.netmonitor.close&days=14"></iframe>
+<iframe src="../perfherder/?test=simple.netmonitor.close"></iframe>
