--- a/tools/inspector.html
+++ b/tools/inspector.html
@@ -21,6 +21,14 @@
 <h4>Close</h4>
 <iframe src="../perfherder/?test=complicated.inspector.close"></iframe>
 
+<h3>Custom<h3>
+<h4>Open</h4>
+<iframe src="../perfherder/?test=custom.inspector.open"></iframe>
+<h4>Reload</h4>
+<iframe src="../perfherder/?test=custom.inspector.reload"></iframe>
+<h4>Close</h4>
+<iframe src="../perfherder/?test=custom.inspector.close"></iframe>
+
 <h3>Simple<h3>
 <h4>Open</h4>
 <iframe src="../perfherder/?test=simple.inspector.open"></iframe>
