Display inspector.layout test and add a global page for panelsInBackground as well as summary.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <h3><a href="tools/netmonitor.html">Netmonitor performance</a></h3>
 <h3><a href="tools/debugger.html">Debugger performance</a></h3>
 <br/>
+<h3><a href="tools/global.html">Panel agnostic performance</a></h3>
+
+<br/>
 <h2>Telemetry:</h2>
 Toolbox “cold” opening
   <a href="https://telemetry.mozilla.org/new-pipeline/dist.html#!cumulative=0&end_date=2017-11-19&keys=inspector!webconsole!netmonitor!jsdebugger&max_channel_version=nightly%252F59&measure=DEVTOOLS_COLD_TOOLBOX_OPEN_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-11-13&table=0&trim=1&use_submission_date=0">distribution</a> -
