--- a/tools/inspector.html
+++ b/tools/inspector.html
@@ -39,3 +39,7 @@
 
 <h4>Mutations</h4>
 <iframe src="../perfherder/?test=inspector.mutations"></iframe>
+
+<h4>Layout panel</h4>
+<iframe src="../perfherder/?test=inspector.layout.open"></iframe>
+
