Display custom debugger probes.

--- a/tools/debugger.html
+++ b/tools/debugger.html
@@ -18,6 +18,14 @@
 <h4>Close</h4>
 <iframe src="../perfherder/?test=complicated.jsdebugger.close"></iframe>
 
+<h3>Custom<h3>
+<h4>Open</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.open"></iframe>
+<h4>Reload</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.reload"></iframe>
+<h4>Close</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.close"></iframe>
+
 <h3>Simple<h3>
 <h4>Open</h4>
 <iframe src="../perfherder/?test=simple.jsdebugger.open"></iframe>
