Update perfherder signatures and include custom console DAMP test.

--- a/tools/console.html
+++ b/tools/console.html
@@ -18,6 +18,14 @@
 <h4>Close</h4>
 <iframe src="../perfherder/?test=complicated.webconsole.close"></iframe>
 
+<h3>Custom<h3>
+<h4>Open</h4>
+<iframe src="../perfherder/?test=custom.webconsole.open"></iframe>
+<h4>Reload</h4>
+<iframe src="../perfherder/?test=custom.webconsole.reload"></iframe>
+<h4>Close</h4>
+<iframe src="../perfherder/?test=custom.webconsole.close"></iframe>
+
 <h3>Simple<h3>
 <h4>Open</h4>
 <iframe src="../perfherder/?test=simple.webconsole.open"></iframe>
