Allows to change the default platform via a query parameter

--- a/perfherder/update-perfherder-signatures.html
+++ b/perfherder/update-perfherder-signatures.html
@@ -3,37 +3,47 @@
 
 <script type="text/javascript" src="../js/fetch.js"></script>
 <script>
+const platforms = [
+  "windows7-32",
+  "windows10-64",
+  "linux64",
+  "osx-10-10",
+];
 async function update() {
+  let final = {};
+
   let url = "https://treeherder.mozilla.org/api/optioncollectionhash/";
   let collections = await fetchJSON(url);
   function getCollectionName(collection) {
     let name = collections.filter(a => a.option_collection_hash == collection)[0].options[0].name;
     return name;
   }
-  url = "https://treeherder.mozilla.org/api/project/mozilla-central/performance/signatures/?framework=1&interval=1209600&platform=windows7-32&subtests=1"
-  let tests = await fetchJSON(url);
-  tests = Object.keys(tests).map(k => {
-    let o = tests[k];
-    o.signature = k;
-    return o;
-  }).filter(t => {
-    return t.suite == "damp" && t.extra_options.includes("e10s") && t.extra_options.length == 1;
-  });
-  let final = {};
-  tests.sort((a,b) => a.test > b.test).forEach(t => {
-    let name = t.test ? t.test.replace(/\.DAMP/, "") : "summary";
-    if (!final[name]) {
-      final[name] = {
-        platforms: {}
+  for (let platform of platforms) {
+    url = `https://treeherder.mozilla.org/api/project/mozilla-central/performance/signatures/?framework=1&interval=1209600&platform=${platform}&subtests=1`;
+    let tests = await fetchJSON(url);
+    tests = Object.keys(tests).map(k => {
+      let o = tests[k];
+      o.signature = k;
+      return o;
+    }).filter(t => {
+      return t.suite == "damp" && t.extra_options.includes("e10s") && t.extra_options.length == 1;
+    });
+
+    tests.sort((a,b) => a.test > b.test).forEach(t => {
+      let name = t.test ? t.test.replace(/\.DAMP/, "") : "summary";
+      if (!final[name]) {
+        final[name] = {
+          platforms: {}
+        };
+      }
+      let s = final[name];
+      let platform = t.machine_platform + "-" + getCollectionName(t.option_collection_hash);
+      s.platforms[platform] = {
+        signature: t.signature,
+        id: t.id,
       };
-    }
-    let s = final[name];
-    let platform = t.machine_platform + "-" + getCollectionName(t.option_collection_hash);
-    s.platforms[platform] = {
-      signature: t.signature,
-      id: t.id,
-    };
-  });
+    });
+  }
 
   document.documentElement.innerHTML = "<pre>const PerfHerderSignatures = "+JSON.stringify(final, null, 2)+"</pre>";
 }
