--- a/tools/inspector.html
+++ b/tools/inspector.html
@@ -26,6 +26,10 @@
 <iframe src="../perfherder/?test=custom.inspector.open"></iframe>
 <h4>Reload</h4>
 <iframe src="../perfherder/?test=custom.inspector.reload"></iframe>
+<h4>Select node</h4>
+<iframe src="../perfherder/?test=custom.inspector.manyrules.selectnode"></iframe>
+<h4>Select node</h4>
+<iframe src="../perfherder/?test=custom.inspector.manyrules.deselectnode"></iframe>
 <h4>Close</h4>
 <iframe src="../perfherder/?test=custom.inspector.close"></iframe>
 
