Fix deselect node test header.

--- a/tools/inspector.html
+++ b/tools/inspector.html
@@ -12,6 +12,7 @@
 
 <h4>Cold open</h4>
 <iframe src="../perfherder/?test=cold.inspector.open"></iframe>
+<iframe src="../perfherder/?test=cold.inspector.open.settle&summary=true" style="height: 100px"></iframe>
 
 <h3>Complicated<h3>
 <h4>Open</h4>
@@ -28,7 +29,7 @@
 <iframe src="../perfherder/?test=custom.inspector.reload"></iframe>
 <h4>Select node</h4>
 <iframe src="../perfherder/?test=custom.inspector.manyrules.selectnode"></iframe>
-<h4>Select node</h4>
+<h4>Deselect node</h4>
 <iframe src="../perfherder/?test=custom.inspector.manyrules.deselectnode"></iframe>
 <h4>Close</h4>
 <iframe src="../perfherder/?test=custom.inspector.close"></iframe>
