Display custom.jsdebugger.{pauses,stepIn,stepOver,stepOut} tests.

--- a/tools/debugger.html
+++ b/tools/debugger.html
@@ -23,6 +23,14 @@
 <iframe src="../perfherder/?test=custom.jsdebugger.open"></iframe>
 <h4>Reload</h4>
 <iframe src="../perfherder/?test=custom.jsdebugger.reload"></iframe>
+<h4>Pause</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.pause"></iframe>
+<h4>Step in</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.stepIn"></iframe>
+<h4>Step over</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.stepOver"></iframe>
+<h4>Step out</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.stepOut"></iframe>
 <h4>Close</h4>
 <iframe src="../perfherder/?test=custom.jsdebugger.close"></iframe>
 
