--- a/tools/inspector.html
+++ b/tools/inspector.html
@@ -30,6 +30,14 @@
 <iframe src="../perfherder/?test=custom.inspector.manyrules.selectnode"></iframe>
 <h4>Deselect node</h4>
 <iframe src="../perfherder/?test=custom.inspector.manyrules.deselectnode"></iframe>
+<h4>Expand - balanced</h4>
+<iframe src="../perfherder/?test=custom.inspector.expandall.balanced"></iframe>
+<h4>Expand - manychildren</h4>
+<iframe src="../perfherder/?test=custom.inspector.expandall.manychildren"></iframe>
+<h4>Collapse - balanced</h4>
+<iframe src="../perfherder/?test=custom.inspector.collapseall.balanced"></iframe>
+<h4>Collapse - manychildren</h4>
+<iframe src="../perfherder/?test=custom.inspector.collapseall.manychildren"></iframe>
 <h4>Close</h4>
 <iframe src="../perfherder/?test=custom.inspector.close"></iframe>
 
