Add UI to flag metadata to changesets and display these flags by coloring the changeset circles.

--- a/perfherder/index.html
+++ b/perfherder/index.html
@@ -7,8 +7,11 @@
 <script type="text/javascript" src="../js/graph.js"></script>
 <script type="text/javascript" src="../js/fetch.js"></script>
 
+<script type="text/javascript" src="push-tags.js"></script>
 <script type="text/javascript" src="perfherder-signatures.js"></script>
 <script type="text/javascript" src="perfherder.js"></script>
+
+<script async defer src="https://apis.google.com/js/api.js"></script>
 
 <svg id="svg"></svg>
 <div id="loading">Downloading data...</div>
