Display new "server.protocoljs" test.

--- a/tools/global.html
+++ b/tools/global.html
@@ -13,5 +13,8 @@
 <h4>Panels in bakground</h4>
 <iframe src="../perfherder/?test=panelsInBackground.reload"></iframe>
 
+<h4>RDP / protocol.js</h4>
+<iframe src="../perfherder/?test=server.protocoljs"></iframe>
+
 <h4>Summary</h4>
 <iframe src="../perfherder/?test=summary"></iframe>
