--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
 <br/>
 <h2>Telemetry:</h2>
 Toolbox “cold” opening
-  <a href="https://telemetry.mozilla.org/new-pipeline/dist.html#!cumulative=0&end_date=2017-11-19&keys=inspector!webconsole!netmonitor!jsdebugger&max_channel_version=nightly%252F59&measure=DEVTOOLS_COLD_TOOLBOX_OPEN_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-11-13&table=0&trim=1&use_submission_date=0">distribution</a> -
-  <a href="https://telemetry.mozilla.org/new-pipeline/evo.html#!cumulative=0&end_date=2017-11-19&keys=inspector!webconsole!netmonitor!jsdebugger&max_channel_version=nightly%252F59&measure=DEVTOOLS_COLD_TOOLBOX_OPEN_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-11-13&table=0&trim=1&use_submission_date=0">evolution</a>
+  <a href="https://mzl.la/2wmtOjK">distribution</a> -
+  <a href="https://mzl.la/2wgB14M">evolution</a>
 <br/>
 Toolbox “warm” opening 
-  <a href="https://telemetry.mozilla.org/new-pipeline/dist.html#!cumulative=0&end_date=2017-11-19&keys=inspector!webconsole!netmonitor!jsdebugger&max_channel_version=nightly%252F59&measure=DEVTOOLS_COLD_TOOLBOX_OPEN_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-11-13&table=0&trim=1&use_submission_date=0">distribution</a> -
-  <a href="https://telemetry.mozilla.org/new-pipeline/evo.html#!cumulative=0&end_date=2017-11-19&keys=inspector!webconsole!netmonitor!jsdebugger&max_channel_version=nightly%252F59&measure=DEVTOOLS_COLD_TOOLBOX_OPEN_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-11-13&table=0&trim=1&use_submission_date=0">evolution</a>
+  <a href="https://mzl.la/1Tfqrjv">distribution</a> -
+  <a href="https://mzl.la/2HXGWNK">evolution</a>
 <br/>
 Page reload 
-  <a href="https://telemetry.mozilla.org/new-pipeline/dist.html#!cumulative=0&end_date=2017-11-19&keys=inspector!webconsole!__none__!__none__&max_channel_version=nightly%252F59&measure=DEVTOOLS_TOOLBOX_PAGE_RELOAD_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-11-13&table=0&trim=1&use_submission_date=0">distribution -
-  <a href="https://telemetry.mozilla.org/new-pipeline/evo.html#!aggregates=median&cumulative=0&end_date=2017-11-05&keys=inspector!webconsole!__none__!__none__&max_channel_version=nightly%252F59&measure=DEVTOOLS_TOOLBOX_PAGE_RELOAD_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-10-24&trim=1&use_submission_date=0">evolution</a>
+  <a href="https://mzl.la/2woj7xi">distribution -
+  <a href="https://mzl.la/1PGPwMm">evolution</a>
 <br/>
 Inspector “new-root to full reload” 
-  <a href="https://telemetry.mozilla.org/new-pipeline/dist.html#!cumulative=0&end_date=2017-11-19&keys=__none__!__none__!__none__&max_channel_version=nightly%252F59&measure=DEVTOOLS_INSPECTOR_NEW_ROOT_TO_RELOAD_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-11-13&table=0&trim=1&use_submission_date=0">distribution</a> -
-  <a href="https://telemetry.mozilla.org/new-pipeline/evo.html#!aggregates=median&cumulative=0&end_date=2017-11-19&keys=!__none__!__none__&max_channel_version=nightly%252F59&measure=DEVTOOLS_INSPECTOR_NEW_ROOT_TO_RELOAD_DELAY_MS&min_channel_version=nightly%252F58&processType=*&product=Firefox&sanitize=0&sort_keys=submissions&start_date=2017-11-13&trim=1&use_submission_date=0">evolution</a>
+  <a href="https://mzl.la/2wqwDAe">distribution</a> -
+  <a href="https://mzl.la/2I3rIqF">evolution</a>
 <h2>BHR</h2>
 <a href="https://arewesmoothyet.com/?mode=track&trackedStat=Devtools%20Hangs">BHR related to DevTools</a> <br/>
 <a href="https://arewesmoothyet.com/?mode=track&trackedStat=All%20Hangs">All BHR</a>
