Display netmonitor's exportHar and console's autocomplete tests.

--- a/tools/console.html
+++ b/tools/console.html
@@ -44,3 +44,5 @@
 <iframe src="../perfherder/?test=console.bulklog"></iframe>
 <h4>Stream log</h4>
 <iframe src="../perfherder/?test=console.streamlog"></iframe>
+<h4>Autocomplete</h4>
+<iframe src="../perfherder/?test=console.autocomplete"></iframe>
