--- a/tools/netmonitor.html
+++ b/tools/netmonitor.html
@@ -17,6 +17,8 @@
 <iframe src="../perfherder/?test=complicated.netmonitor.reload"></iframe>
 <h4>Requests finished</h4>
 <iframe src="../perfherder/?test=complicated.netmonitor.requestsFinished"></iframe>
+<h4>HAR eport</h4>
+<iframe src="../perfherder/?test=complicated.netmonitor.exportHar"></iframe>
 <h4>Close</h4>
 <iframe src="../perfherder/?test=complicated.netmonitor.close"></iframe>
 
