--- a/perfherder/update-perfherder-signatures.html
+++ b/perfherder/update-perfherder-signatures.html
@@ -18,49 +18,65 @@ async function update() {
     let name = collections.filter(a => a.option_collection_hash == collection)[0].options[0].name;
     return name;
   }
-  for (let platform of platforms) {
-    url = `https://treeherder.mozilla.org/api/project/mozilla-central/performance/signatures/?framework=1&interval=31536000&platform=${platform}&subtests=1`;
-    let tests = await fetchJSON(url);
-    tests = Object.keys(tests).map(k => {
-      let o = tests[k];
-      o.signature = k;
-      return o;
-    }).filter(t => {
-      // Select only the tests we want: DAMP and with at least e10s (there can be other items in there, like "stylo")
-      return t.suite == "damp" && t.extra_options && t.extra_options.includes("e10s") && !t.extra_options.includes("stylo_disabled");
-    });
+  async function fetchFramework(framework) {
+    for (let platform of platforms) {
+      url = `https://treeherder.mozilla.org/api/project/mozilla-central/performance/signatures/?framework=${framework}&interval=31536000&platform=${platform}&subtests=1`;
+      let tests = await fetchJSON(url);
+      tests = Object.keys(tests).map(k => {
+        let o = tests[k];
+        o.signature = k;
+        return o;
+      }).filter(t => {
+        // Select only the tests we want: DAMP and with at least e10s (there can be other items in there, like "stylo")
+        return t.suite == "damp" && t.extra_options && t.extra_options.includes("e10s") && !t.extra_options.includes("stylo_disabled");
+      });
 
-    tests.sort((a,b) => a.test > b.test).forEach(t => {
-      let name = t.test ? t.test.replace(/\.DAMP/, "") : "summary";
-      if (!final[name]) {
-        final[name] = {
-          platforms: {}
-        };
-      }
-      let s = final[name];
-      // getCollectionName returns "pgo" or "opt"
-      let platform = t.machine_platform + "-" + getCollectionName(t.option_collection_hash);
-      if (!s.platforms[platform]) {
-        s.platforms[platform] = {
-          signature: null,
-          id: null,
-          old_signatures: []
-        };
-      }
-      // Since Feb 09 2018, now tests includes "stylo" in extra_options.
-      // But we still have to fetch the ones without "stylo" for any data before Feb 09.
-      if (t.extra_options.includes("stylo")) {
-        s.platforms[platform].signature = t.signature;
-        s.platforms[platform].id = t.id;
-      } else {
-        s.platforms[platform].old_signatures.push({
-          signature : t.signature,
-          id: t.id,
-          before: new Date(2018, 1, 9, 0, 0).getTime(), // The date when this test became obsolete
-        });
-      }
-    });
+      tests.sort((a,b) => a.test > b.test).forEach(t => {
+        let name = t.test ? t.test.replace(/\.DAMP/, "") : "summary";
+        if (!final[name]) {
+          final[name] = {
+            platforms: {}
+          };
+        }
+        let s = final[name];
+        // getCollectionName returns "pgo" or "opt"
+        let platform = t.machine_platform + "-" + getCollectionName(t.option_collection_hash);
+        if (!s.platforms[platform]) {
+          s.platforms[platform] = {
+            signature: null,
+            id: null,
+            old_signatures: []
+          };
+        }
+
+        // Starting August 15th 2018, DAMP runs in its own framework
+        if (framework == 12) {
+          s.platforms[platform].signature = t.signature;
+          s.platforms[platform].id = t.id;
+          s.platforms[platform].framework = framework;
+        } else {
+          // Since Feb 09 2018, now tests includes "stylo" in extra_options.
+          // But we still have to fetch the ones without "stylo" for any data before Feb 09.
+          let before;
+          if (t.extra_options.includes("stylo")) {
+            before = new Date(2018, 7, 15, 0, 0).getTime();
+          } else {
+            before = new Date(2018, 1, 9, 0, 0).getTime(); // The date when this test became obsolete
+          }
+          s.platforms[platform].old_signatures.push({
+            signature : t.signature,
+            id: t.id,
+            framework,
+            before,
+          });
+        }
+      });
+    }
   }
+  // Fetch old DAMP run, when it used to run as part of Talos
+  await fetchFramework(1);
+  // Starting August 15th 2018, DAMP now runs in its own framework to be sheriffed individualy
+  await fetchFramework(12);
 
   document.documentElement.innerHTML = "<pre>const PerfHerderSignatures = "+JSON.stringify(final, null, 2)+"</pre>";
 }
