Display inspector module metrics.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <h3><a href="tools/debugger.html">Debugger performance</a></h3>
 <br/>
 <h3><a href="tools/global.html">Panel agnostic performance</a></h3>
+<br/>
+<h3><a href="tools/module-metrics.html">Modules</a></h3>
 
 <br/>
 <h2>Telemetry:</h2>
