--- a/perfherder/update-perfherder-signatures.html
+++ b/perfherder/update-perfherder-signatures.html
@@ -28,11 +28,15 @@ async function update() {
         return o;
       }).filter(t => {
         // Select only the tests we want: DAMP and with at least e10s (there can be other items in there, like "stylo")
-        return t.suite == "damp" && t.extra_options && t.extra_options.includes("e10s") && !t.extra_options.includes("stylo_disabled");
+        return (t.suite == "damp" && t.extra_options && t.extra_options.includes("e10s") && !t.extra_options.includes("stylo_disabled")) ||
+          t.suite.match(/-metrics$/);
       });
 
       tests.sort((a,b) => a.test > b.test).forEach(t => {
         let name = t.test ? t.test.replace(/\.DAMP/, "") : "summary";
+        if (t.suite != "damp") {
+          name = t.suite + "." + name;
+        }
         if (!final[name]) {
           final[name] = {
             platforms: {}
