Add pages for metrics tests for debugger, netmonitor & webconsole

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <br/>
 <h3><a href="tools/global.html">Panel agnostic performance</a></h3>
 <br/>
-<h3><a href="tools/module-metrics.html">Modules</a></h3>
+<h3><a href="tools/module-metrics-debugger.html">Debugger Modules</a></h3>
+<h3><a href="tools/module-metrics-inspector.html">Inspector Modules</a></h3>
+<h3><a href="tools/module-metrics-netmonitor.html">Netmonitor Modules</a></h3>
+<h3><a href="tools/module-metrics-webconsole.html">Webconsole Modules</a></h3>
 
 <br/>
 <h2>Telemetry:</h2>
@@ -21,15 +24,15 @@ Toolbox “cold” opening
   <a href="https://mzl.la/2wmtOjK">distribution</a> -
   <a href="https://mzl.la/2wgB14M">evolution</a>
 <br/>
-Toolbox “warm” opening 
+Toolbox “warm” opening
   <a href="https://mzl.la/1Tfqrjv">distribution</a> -
   <a href="https://mzl.la/2HXGWNK">evolution</a>
 <br/>
-Page reload 
+Page reload
   <a href="https://mzl.la/2woj7xi">distribution -
   <a href="https://mzl.la/1PGPwMm">evolution</a>
 <br/>
-Inspector “new-root to full reload” 
+Inspector “new-root to full reload”
   <a href="https://mzl.la/2wqwDAe">distribution</a> -
   <a href="https://mzl.la/2I3rIqF">evolution</a>
 <h2>BHR</h2>
