Add debugger's project-search subtest.

--- a/tools/debugger.html
+++ b/tools/debugger.html
@@ -31,6 +31,8 @@
 <iframe src="../perfherder/?test=custom.jsdebugger.stepOver"></iframe>
 <h4>Step out</h4>
 <iframe src="../perfherder/?test=custom.jsdebugger.stepOut"></iframe>
+<h4>Project search</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.project-search"></iframe>
 <h4>Close</h4>
 <iframe src="../perfherder/?test=custom.jsdebugger.close"></iframe>
 
