Display memory test

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <h3><a href="tools/module-metrics-inspector.html">Inspector Modules</a></h3>
 <h3><a href="tools/module-metrics-netmonitor.html">Netmonitor Modules</a></h3>
 <h3><a href="tools/module-metrics-webconsole.html">Webconsole Modules</a></h3>
+<br/>
+<h3><a href="tools/memory.html">Memory</a></h3>
 
 <br/>
 <h2>Telemetry:</h2>
