Add netmonitor, console and debugger cold open

--- a/tools/debugger.html
+++ b/tools/debugger.html
@@ -10,6 +10,9 @@
 <a class="fa fa-home" href="../"></a>
 <h1>Debugger Performance</h1>
 
+<h4>Cold open</h4>
+<iframe src="../perfherder/?test=cold.jsdebugger.open"></iframe>
+
 <h3>Complicated<h3>
 <h4>Open</h4>
 <iframe src="../perfherder/?test=complicated.jsdebugger.open"></iframe>
