--- a/tools/netmonitor.html
+++ b/tools/netmonitor.html
@@ -10,6 +10,9 @@
 <a class="fa fa-home" href="../"></a>
 <h1>Netmonitor Performance</h1>
 
+<h4>Cold open</h4>
+<iframe src="../perfherder/?test=cold.netmonitor.open"></iframe>
+
 <h3>Complicated<h3>
 <h4>Open</h4>
 <iframe src="../perfherder/?test=complicated.netmonitor.open"></iframe>
