Add debugger preview to debugger page

--- a/tools/debugger.html
+++ b/tools/debugger.html
@@ -36,6 +36,8 @@
 <iframe src="../perfherder/?test=custom.jsdebugger.stepOut"></iframe>
 <h4>Project search</h4>
 <iframe src="../perfherder/?test=custom.jsdebugger.project-search"></iframe>
+<h4>Preview</h4>
+<iframe src="../perfherder/?test=custom.jsdebugger.preview"></iframe>
 <h4>Close</h4>
 <iframe src="../perfherder/?test=custom.jsdebugger.close"></iframe>
 
