--- a/tools/console.html
+++ b/tools/console.html
@@ -49,3 +49,5 @@
 <iframe src="../perfherder/?test=console.streamlog"></iframe>
 <h4>Autocomplete</h4>
 <iframe src="../perfherder/?test=console.autocomplete"></iframe>
+<h4>Typing</h4>
+<iframe src="../perfherder/?test=console.typing"></iframe>
