Read perfherder data from linux1804-64 instead of linux64

--- a/inspect/index.html
+++ b/inspect/index.html
@@ -22,8 +22,8 @@
   <label>New:</label><input name="new" /><br/>
   <label>Platform:</label>
     <select name="platform">
-      <option value="linux64-opt">Linux opt</option>
-      <option value="linux64-pgo">Linux pgo</option>
+      <option value="linux1804-64-opt">Linux opt</option>
+      <option value="linux1804-64-pgo">Linux pgo</option>
       <option value="windows10-64-opt">Windows 10 opt</option>
       <option value="windows10-64-pgo">Windows 10 pgo</option>
     </select><br/>
@@ -68,7 +68,7 @@ body {
     stroke-width: 1px;
 }
 
-.title 
+.title
 {
     text-anchor: middle;
     font-size: 16px;
@@ -92,29 +92,29 @@ body {
     opacity: 0.6;
 }
 
-circle 
+circle
 {
     stroke: none;
     shape-rendering: crispEdges;
 }
 
-.categoryLabel 
+.categoryLabel
 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 0.75em;
 }
 
-.outlier 
+.outlier
 {
     opacity: 1;
 }
 
-.point 
+.point
 {
     opacity: 0.7;
 }
 
-.axis path 
+.axis path
 {
     fill: none;
     stroke: black;
@@ -122,7 +122,7 @@ circle
     shape-rendering: crispEdges;
 }
 
-.axis line 
+.axis line
 {
     fill: none;
     stroke: black;
@@ -130,23 +130,23 @@ circle
     shape-rendering: crispEdges;
 }
 
-.axis text 
+.axis text
 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 10px;
 }
 
-div.tooltip 
-{   
-    position: absolute;         
-    text-align: center;                                              
-    padding: 3px;               
+div.tooltip
+{
+    position: absolute;
+    text-align: center;
+    padding: 3px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 11px;      
-    background: lightsteelblue; 
-    border: 0px;        
-    border-radius: 8px;         
-    pointer-events: none;           
+    font-size: 11px;
+    background: lightsteelblue;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
 }
 
 tr.even {
