--- a/tools/module-metrics-netmonitor.html
+++ b/tools/module-metrics-netmonitor.html
@@ -11,13 +11,13 @@
 <h1>Netmonitor Module metrics</h1>
 
 <h4>All modules</h4>
-<iframe src="../perfherder/?test=netmonitor-metrics.all-modules&platform=linux64-opt"></iframe>
+<iframe src="../perfherder/?test=netmonitor-metrics.all-modules&platform=linux1804-64-opt"></iframe>
 
 <h4>All chars</h4>
-<iframe src="../perfherder/?test=netmonitor-metrics.all-chars&platform=linux64-opt"></iframe>
+<iframe src="../perfherder/?test=netmonitor-metrics.all-chars&platform=linux1804-64-opt"></iframe>
 
 <h4>Netmonitor modules</h4>
-<iframe src="../perfherder/?test=netmonitor-metrics.netmonitor-modules&platform=linux64-opt"></iframe>
+<iframe src="../perfherder/?test=netmonitor-metrics.netmonitor-modules&platform=linux1804-64-opt"></iframe>
 
 <h4>Netmonitor chars</h4>
-<iframe src="../perfherder/?test=netmonitor-metrics.netmonitor-chars&platform=linux64-opt"></iframe>
+<iframe src="../perfherder/?test=netmonitor-metrics.netmonitor-chars&platform=linux1804-64-opt"></iframe>
