--- a/perfherder/update-perfherder-signatures.html
+++ b/perfherder/update-perfherder-signatures.html
@@ -6,6 +6,7 @@
 const platforms = [
   "windows7-32",
   "windows10-64",
+  "linux1804-64",
   "linux64",
   "osx-10-10",
 ];
@@ -45,41 +46,32 @@ async function update() {
         }
         let s = final[name];
         // getCollectionName returns "pgo" or "opt"
-        let platform = t.machine_platform + "-" + getCollectionName(t.option_collection_hash);
-        if (!s.platforms[platform]) {
-          s.platforms[platform] = {
+        let build = (platform == "linux64" ? "linux1804-64" : platform) + "-" + getCollectionName(t.option_collection_hash);
+        console.log(build, name);
+        if (!s.platforms[build]) {
+          s.platforms[build] = {
             signature: null,
             id: null,
             old_signatures: []
           };
         }
 
-        // Starting August 15th 2018, DAMP runs in its own framework
-        if (framework == 12) {
-          s.platforms[platform].signature = t.signature;
-          s.platforms[platform].id = t.id;
-          s.platforms[platform].framework = framework;
-        } else {
-          // Since Feb 09 2018, now tests includes "stylo" in extra_options.
-          // But we still have to fetch the ones without "stylo" for any data before Feb 09.
-          let before;
-          if (t.extra_options.includes("stylo")) {
-            before = new Date(2018, 7, 15, 0, 0).getTime();
-          } else {
-            before = new Date(2018, 1, 9, 0, 0).getTime(); // The date when this test became obsolete
-          }
-          s.platforms[platform].old_signatures.push({
+        if (platform == "linux64") {
+          // Starting December 10th 2019, linux builds are now named linux1806 instead of linux64 (bug 1602863)
+          s.platforms[build].old_signatures.push({
             signature : t.signature,
             id: t.id,
             framework,
-            before,
+            before: new Date(2019, 11, 10, 0, 0).getTime(),
           });
+        } else {
+          s.platforms[build].signature = t.signature;
+          s.platforms[build].id = t.id;
+          s.platforms[build].framework = framework;
         }
       });
     }
   }
-  // Fetch old DAMP run, when it used to run as part of Talos
-  await fetchFramework(1);
   // Starting August 15th 2018, DAMP now runs in its own framework to be sheriffed individualy
   await fetchFramework(12);
 
