--- a/perfherder/update-perfherder-signatures.html
+++ b/perfherder/update-perfherder-signatures.html
@@ -23,11 +23,7 @@ async function update() {
     for (let platform of platforms) {
       url = `https://treeherder.mozilla.org/api/project/mozilla-central/performance/signatures/?framework=${framework}&interval=31536000&platform=${platform}&subtests=1`;
       let tests = await fetchJSON(url);
-      tests = Object.keys(tests).map(k => {
-        let o = tests[k];
-        o.signature = k;
-        return o;
-      }).filter(t => {
+      tests = tests.filter(t => {
         // Select only the tests we want: DAMP and with at least e10s (there can be other items in there, like "stylo")
         return (t.suite == "damp" && t.extra_options && t.extra_options.includes("e10s") && !t.extra_options.includes("stylo_disabled")) ||
           t.suite.match(/-metrics$/) ||
@@ -69,13 +65,13 @@ async function update() {
         if (platform == "linux64") {
           // Starting December 10th 2019, linux builds are now named linux1806 instead of linux64 (bug 1602863)
           s.platforms[build].old_signatures.push({
-            signature : t.signature,
+            signature : t.signature_hash,
             id: t.id,
             framework,
             before: new Date(2019, 11, 10, 0, 0).getTime(),
           });
         } else {
-          s.platforms[build].signature = t.signature;
+          s.platforms[build].signature = t.signature_hash;
           s.platforms[build].id = t.id;
           s.platforms[build].framework = framework;
         }
