--- a/perfherder/update-perfherder-signatures.html
+++ b/perfherder/update-perfherder-signatures.html
@@ -23,7 +23,7 @@ async function update() {
     for (let platform of platforms) {
       url = `https://treeherder.mozilla.org/api/project/mozilla-central/performance/signatures/?framework=${framework}&interval=31536000&platform=${platform}&subtests=1`;
       let tests = await fetchJSON(url);
-      tests = tests.filter(t => {
+      tests = Object.values(tests).filter(t => {
         // Select only the tests we want: DAMP and with at least e10s (there can be other items in there, like "stylo")
         return (t.suite == "damp" && t.extra_options && t.extra_options.includes("e10s") && !t.extra_options.includes("stylo_disabled")) ||
           t.suite.match(/-metrics$/) ||
