Update window10-shippable-opt platform to qr

--- a/perfherder/update-perfherder-signatures.html
+++ b/perfherder/update-perfherder-signatures.html
@@ -4,8 +4,7 @@
 <script type="text/javascript" src="../js/fetch.js"></script>
 <script>
 const platforms = [
-  "windows7-32",
-  "windows10-64-shippable",
+  "windows10-64-shippable-qr",
   "linux1804-64-shippable",
   "linux64",
   "osx-10-10",
